# carla-claude-plugin

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/add-carla-vehicle/: LESSONS.md  SKILL.md  run.sh
skills/add-carla-vehicle/scripts/: add_vehicle.py  drive_demo.py  run_server.sh  spawn_test.py
skills/build-carla-ue4-linux/: LESSONS.md  SKILL.md  env.sh
skills/build-carla-ue4-linux/steps/: 00_check_env.sh  01_install_deps.sh  02_conda_env.sh  03_build_ue4.sh  04_build_pythonapi.sh  05_fetch_content.sh  06_build_editor.sh  07_verify.sh
skills/ue4-editor-python/: LESSONS.md  SKILL.md  run_python.sh
skills/ue4-editor-python/scripts/: list_blueprints.py
src/carla_mcp/: __init__.py  server.py
