[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carla-mcp"
version = "0.1.0"
description = "MCP server exposing the CARLA authoring/build skill registry for Claude Code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
carla-mcp = "carla_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
